--- a/index.html
+++ b/index.html
@@ -12,8 +12,27 @@
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
       rel="stylesheet"
     />
-
     <title>dinda-portofolio</title>
+    <script>
+      (function () {
+        try {
+          const theme = localStorage.getItem("theme");
+          if (theme === "dark") {
+            document.documentElement.classList.add("dark");
+          } else if (theme === "light") {
+            document.documentElement.classList.remove("dark");
+          } else {
+            // fallback to system preference
+            const prefersDark = window.matchMedia(
+              "(prefers-color-scheme: dark)"
+            ).matches;
+            if (prefersDark) document.documentElement.classList.add("dark");
+          }
+        } catch (e) {
+          // ignore for environments without localStorage
+        }
+      })();
+    </script>
   </head>
   <body>
     <div id="root"></div>
